# flowcraft

./: .gitignore  CSS_Architecture_Analysis.md  JavaScript_Architecture_Analysis.md  README.md  _brands.xlsx  _categories.xlsx  app.py  flowchart_data.json  pyproject.toml  requirements.txt  test42.py
.cursor/rules/: this-is-py-package.mdc
1_categories_selectors/: 1_1_0_1_get_base_url.py  1_1_0_2_get_page_content.py  1_1_1_1_use_nav_tag.py  1_1_2_add_base_url_if_needed.py  1_1_3_filter_urls.py  1_1_4_find_all_products_page.py  delete_from_previous_script.py  get_data_from_brands_excel.py
REFACTOR/: setting_split.md
REFACTOR_NOTES/: Execution_Canvas_Separation_Plan.md  FlowchartBuilder_Modularization_Plan.md  JavaScript_Architecture_Analysis.md  JavaScript_Bloating_Analysis.md  JavaScript_Duplication_Analysis.md  flowchartbuilder_plan.md
TEST/: test_error.py
backend/: __init__.py
backend/routes/: __init__.py  analysis.py  editors.py  execution.py  files.py  flowcharts.py  settings.py  ui.py
backend/services/: __init__.py  analysis.py  processes.py  storage.py
flowcharts/: 1_categories_selectors.json  annotation_test.json  arrow_tester.json  curso.json  dash_test.json  default.json  erase_test.json  example_of_data_flow.json  fail_on_purpose.json  flowchart.json  if_test.json  linear.json  path_test.json  simple.json  simple2.json  simple_test.json  test.json
flowcraft/: __init__.py  app_factory.py  cli.py
flowcraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
history/1_categories_selectors/: 15cffc9c-dc54-497a-86d8-95faf2228a10.json  16a3cb30-6b5e-44d2-8e5e-df2b9fcbe64a.json  2212bc88-4dbd-4ba5-94f8-9a957669b0be.json  27088ae5-0dda-4920-9e30-4031c81f9d7c.json  335ec649-e6e4-446b-bf68-fff8482542d6.json  3b6b1f7c-19fa-4f46-9bca-74d62ddb80a0.json  40c44405-c07d-44fe-9283-209041710793.json  495cfec5-3a9c-4a03-80cd-27ed8713d175.json  49adb772-30f2-44ee-bb5b-c01c28c73cf0.json  4e4496de-f151-4f5d-a659-af431e7b8931.json  52b9b61b-eb05-4f51-8edf-b58a75aca6f5.json  5479478d-933d-4d13-a346-682184bb00ab.json  58ccee31-b312-4a3c-a951-fc06a5a8a1f7.json  58e48282-1dd9-445e-b0bc-54ecaa9d23b9.json  5b802ad2-9832-4bb7-bcd3-6c2d96aac240.json  695b5000-b46b-4d82-aa78-e39008594d08.json  69df38a3-318d-406f-b334-f205b26413e7.json  7065ef5b-378d-444e-8854-97e15ce177f6.json  754aff47-db78-46e9-b5a2-b04ee3f19875.json  7a3a5482-c266-4e0f-8ca4-1b71742afbc9.json  7da6adca-0a13-401e-b5a4-c15092dcc3db.json  9308aadb-6a81-43cf-a648-2022e1a76deb.json  9405d2a4-dd30-4d2c-8139-19aa0854184e.json  986e3f3d-4ea4-4f51-8bcf-a805804e33c3.json  a9456c88-e79f-43c8-9d0a-4a8f939c1cfa.json  a9b5de69-3e6f-4b18-99d8-7eb46919b4dd.json  c2979ad1-0959-4d94-b5e0-12c1ccdecaeb.json  ce261cf1-e562-42a8-a7d4-e17591598a2f.json  d12f1373-d56b-4db1-a54f-b855ae2ee531.json  d4b696fe-3792-4671-adc4-a5fef635b0f8.json  dc0a14e7-0abf-448a-8d62-6aed016a6f5b.json  e4d75478-002c-41b5-8e50-75df7926b576.json  f346681e-658a-4490-bd9f-fdc81231b0e4.json  f7e4bd26-18e7-45a0-8590-0741a709aa20.json  fcdcdff0-3965-4a5e-9f40-a597567df4e2.json  fcefab96-52fb-48c5-b5cd-e1221ff688a2.json
history/curso/: f07e81dc-7166-4e79-b9c4-6f5bf1e38534.json  fc66f772-fed9-4cb8-896e-dc64e32cc16c.json
history/dash_test/: 0035e5f7-2b25-4bba-af29-32d5cdca28cc.json  036e3fa5-636b-4ad9-a82d-1274307c89da.json  131580ae-3099-4743-99ed-0f4bd54d0bca.json  159bcbb5-bf0b-45c3-9516-55671b7a48d2.json  16eaaacf-78ba-41b2-ab54-ac8ace161de7.json  19c53fac-88fd-4ed5-9326-f36a45bd46f6.json  1ee8ef73-d789-4be7-a9bc-5ce9da6fe369.json  30d0c43f-8abe-4305-ba8f-770be3808d03.json  35cf4584-9d70-421f-8f84-ff50248fafb4.json  38d2fc9f-ce2a-4ebf-b319-e66fc4a78c4c.json  397b30fe-d559-45e3-94dc-f71e9914f0f2.json  3a81dfe4-9b48-4b96-90a4-8fd0086e8797.json  46d8733d-e59d-48a5-be62-92769661405a.json  49d55608-1ba6-4c60-8754-9cc1f775baf7.json  4cbb46c6-ba99-48ee-8a0c-6fd7e0b0ac9c.json  5128e4e6-c33d-4054-ae55-7cd2aa0039dc.json  51dfae4f-860f-4bff-b14e-15295c903461.json  5356f95e-3656-4832-a8d2-15c36aea9107.json  5ca6eed3-9d22-4b39-858c-3ea947717af4.json  67051034-868e-44c1-9892-7747fbe22212.json  6a2123cc-6c06-471c-a5c6-312c4fd1834e.json  6a6c0764-5db2-46c9-a92f-238213fd20ec.json  74f0a88d-db53-49e0-8ed7-c361f3cb8406.json  75b0233c-89dc-4513-a6f7-6a88d3d7446f.json  7a01467c-28a2-4aa9-ae35-d03d39db7040.json  816cc6c1-52cd-4d3a-a43d-3b8de3b73116.json  8a0947ea-d098-4205-84b6-b90ea695739c.json  9124b2eb-8c84-4533-80d0-bd119c396e12.json  9b5312eb-bc62-48be-aa0e-6bbb159c6542.json  9d4ddbe9-2ec3-467d-ae66-dddb2719559b.json  a87e4be0-0777-4ba6-8294-068ec908dc85.json  a9841af4-7ed1-41c9-bef8-b6c7741f323a.json  b157cad7-7ae7-4238-bd27-e0336ab86800.json  b766df72-92db-42e0-80e2-63a703000864.json  ba7ffa01-4ed2-403c-ad9a-27a803421d4d.json  da320d36-6dee-479f-9dde-3086c40aea50.json  dc00c494-ef50-4fd0-b73a-566af63457cc.json  dc3176bc-0dfb-4bfd-9c12-290fa1d5648d.json  e15a6ad6-5d0c-459e-a9c9-0d2a5a6e9bb7.json  (+5 more)
nodes/: 1.py  2.py  3.py  api_client.py  data_processing.py  database_operations.py  example.py  inputtest.py  ml_model.py  node1.py  node3.py  sidenode.py  test_resume_node2.py  test_resume_node3.py  test_variables.py
python_test_files/: error2.py  error4.py
static/: flowchart.js.backup
templates/: dashboard.html  data_matrix.html  index.html  multirun.html  scripts.html  settings.html  template.py
(+702 files in other folders)
