 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "flowcraft"
 version = "0.1.0"
 description = "visual flowchart builder and executor for python nodes"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [{ name = "FlowCraft" }]
 license = { text = "MIT" }
 keywords = ["flowchart", "flask", "python", "workflow"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Framework :: Flask",
   "Operating System :: OS Independent",
 ]
 dependencies = [
   "Flask>=2.3,<3.0",
   "Flask-CORS>=4.0,<5.0",
   "psutil>=5.9",
   "requests>=2.31",
   "numpy>=1.26,<2.0",
 ]

 [project.optional-dependencies]
 dev = [
   "pytest>=7.0",
   "ruff>=0.4",
 ]

 [project.scripts]
 flowcraft = "flowcraft.cli:main"

 [tool.setuptools]
 include-package-data = true

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["flowcraft", "backend*"]


